--- a/.github/workflows/DevCard.yml
+++ b/.github/workflows/DevCard.yml
@@ -13,8 +13,10 @@ jobs:
       contents: write
     steps:
       - name: devcard
-        uses: dailydotdev/action-devcard@3.0.0
+        uses: dailydotdev/action-devcard@3.2.1
         with:
           user_id: ${{ secrets.USER_ID }}
           type: wide
+          commit_branch: devcard
+          commit_filename: devcard.png
           commit_message: "chore: update ${filename}"
